prevent wrapping in wishlist? maybe?

--- a/frontend/src/components/pages/page-wishlist/wishlist-card/wishlist-card.scss
+++ b/frontend/src/components/pages/page-wishlist/wishlist-card/wishlist-card.scss
@@ -74,9 +74,10 @@
       font-size: $font-size;
     }
 
-    &>div {
+    & > div {
       display: flex;
       align-items: center;
+      white-space: nowrap;
     }
 
     .divider {
